<resources>
    <string name="app_name">msports</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matches">matches</string>
    <string name="stream">stream</string>
    <string name="home">Home</string>
    <string name="streammenu">Stream</string>
    <string name="news">News</string>
    <string name="matchesmenu">Matches</string>
    <string name="trending">Trending</string>
    <string name="view_all">View all</string>
    <string name="stream_now">Stream Now</string>
    <string name="newsHead">News</string>
    <string name="top_news">Top News</string>
    <string name="moyale_barracks">Moyale Barracks</string>
    <string name="trending_match">Trending Match</string>
    <string name="match">Matches</string>
    <string name="search_match_you_want_to_stream">search match you want to stream</string>
</resources>