<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    tools:context=".Home">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:paddingTop="16dp">

        <!-- Profile Icon -->
        <ImageView
            android:id="@+id/iconLogo"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/msportslogo" />

        <!-- Notification Icon -->
        <ImageView
            android:id="@+id/iconProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="-6dp"
            android:src="@drawable/ic_action_user"
            app:tint="#171717" />

        <ImageView
            android:id="@+id/iconNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_bell"
            android:layout_toStartOf="@id/iconProfile"
            app:tint="#171717"
            android:layout_marginEnd="6dp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:id="@+id/relative_title">

                <!-- TextView for Trending -->
                <TextView
                    android:id="@+id/textTrending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trending"
                    android:fontFamily="@font/broadway"
                    android:textSize="25sp"
                    android:textColor="#171717"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true" />

                <!-- TextView for View All -->
                <TextView
                    android:id="@+id/textViewAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:text="@string/view_all"
                    android:textSize="18sp"
                    android:textColor="#4e5157"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="16dp">

                    <ImageView
                        android:id="@+id/imageTrending"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/match_image"
                        android:scaleType="centerCrop" />

                    <!-- Button in the middle of the Image -->
                    <Button
                        android:id="@+id/buttonStreamNow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stream_now"
                        android:backgroundTint="@color/light_green"
                        android:textColor="#171717"
                        android:layout_marginEnd="10dp"
                        android:layout_gravity="bottom|end" />
                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <!-- Home News Section -->
            <RelativeLayout
                android:id="@+id/news_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <!-- TextView for Top News -->
                <TextView
                    android:id="@+id/textNews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/broadway"
                    android:text="@string/top_news"
                    android:textColor="#171717"
                    android:textSize="25sp" />

                <!-- TextView for View All -->
                <TextView
                    android:id="@+id/textViewAllnews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="0dp"
                    android:text="@string/view_all"
                    android:textColor="#4e5157"
                    android:textSize="18sp" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageTrend"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:src="@drawable/winks"
                        android:scaleType="centerCrop"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/textView" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:fontFamily="sans-serif"
                        android:text="Lorem ipsum dolor sit amet, adipiscing elit. Nunc elit diam, egestas id malesuada quis, mattis ac enim"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/icons"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent" />

                    <RelativeLayout
                        android:id="@+id/icons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent">

                        <!-- TextView -->
                        <TextView
                            android:id="@+id/titleText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:text="@string/moyale_barracks"
                            android:layout_alignParentStart="true"
                            android:layout_toStartOf="@id/comments"
                            android:layout_centerVertical="true"
                            android:paddingEnd="8dp" />

                        <!-- Comments Icon -->
                        <ImageView
                            android:id="@+id/comments"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="6dp"
                            android:src="@drawable/chatbubble"
                            app:tint="@color/light_green"
                            android:layout_centerVertical="true" />

                        <!-- Share Icon -->
                        <ImageView
                            android:id="@+id/share"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/share"
                            app:tint="@color/light_green"
                            android:layout_toStartOf="@id/comments"
                            android:layout_marginEnd="16dp"
                            android:layout_centerVertical="true" />
                    </RelativeLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
